/* $Id: changelog,v 1.1452 2001-05-28 17:18:33 phaller Exp $ */

 2001-05-28: Patrick Haller <patrick.haller@innotek.de>
    - GDI32:    o Split GDI32.CPP into ICM.CPP and GDI32.CPP
    		o CreateDC() accepts "display" instead of "DISPLAY"
                  (fixes font-not-found problem in ZD Bench 99)
    - KERNEL32: o mmap.cpp: slightly accelerated ::findMapByView()
    		o directory.cpp: don't trap in CreateDirectory(NULL, NULL)                
    - DDRAW:    o implemented DirectDrawCreateClipper()

 2001-05-27: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Listview: merged old LISTVIEW_EnsureVisible
                  (gets rid of excessive repaints)
    - USER32:   o Replaced TabbedTextOutA/W & GetTabbedTextExtentA/W with
                  Wine version. GPI doesn't support strings > 512 characters.
    - GDI32:    o Commented out InternalTabbedTextOutA/W & InternalGetTabbedTextExtentA/W

 2001-05-26: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Datetime control resync with Wine (get/setrange added)

 2001-05-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - Odin.ini: o Removed MS Shell Dlg font mapping
    - GDI32:    o Synchronize DIB Section after SelectPalette call (if selected in DC)
                  (fixes wrong colors for some bitmaps)
                o Update bitmap and synchronize DIB Section in SetDIBits
                o Update color table during DIB sync too
    - USER32:   o Dialog control x & y coordinates in dialog template are signed 
                  words. (fixes dialog controls with negative offset)
                o Rewrote Post(Thread)/SendMessage; filtering of posted/sent
                  messages (by app) is now possible with Peek/GetMessage.
                o PeekMessage fix; got rid of double removal for untranslated 
                  messages

 2001-05-24: Sander van Leeuwen <sandervl@xs4all.nl>
    - GDI32:    o Commented out recent changes (color conversion) in