@@ -1,0 +1,19 @@
+/* $Id: wow32.h,v 1.1 2001-05-28 18:13:48 phaller Exp $ */
+
+/* Definitions for the WOW32 stub library
+ *
+ * Copyright 2001 Patrick Haller <patrick.haller@innotek.de>
+ */
+
+#ifndef __ODIN_WOW32_H
+#define __ODIN_WOW32_H
+
+#include <windef.h>
+#include <wctype.h>
+
+
+/* function prototypes */
+
+
+
+#endif /* __ODIN_WOW32_H */
